fix build history jumping and adjust tests

--- a/app/styles/app/layouts/pull-requests.sass
+++ b/app/styles/app/layouts/pull-requests.sass
@@ -35,7 +35,6 @@
         content: ""
         +fadeOut(right, -90deg, white)
       &:hover
-        overflow: visible
         &:after
           content: none
         a
